# OpenCV-Toolkit

./: README.md
backend-fastapi/OpenCV-Toolkit/: README.md  pyproject.toml
backend-fastapi/OpenCV-Toolkit/app/: __init__.py  main.py
backend-fastapi/OpenCV-Toolkit/app/api/: __init__.py  router.py
backend-fastapi/OpenCV-Toolkit/app/api/v1/: __init__.py  auth.py  dashboard.py  health.py  user.py
backend-fastapi/OpenCV-Toolkit/app/core/: __init__.py  config.py
backend-fastapi/OpenCV-Toolkit/app/db/: __init__.py  session.py
backend-fastapi/OpenCV-Toolkit/app/models/: __init__.py  gallery.py  user.py
backend-fastapi/OpenCV-Toolkit/app/schemas/: __init__.py  auth.py  gallery.py  user.py
backend-fastapi/OpenCV-Toolkit/app/services/: __init__.py  auth.py  blindness.py  brightness.py  contrast.py  gallery.py  rotator.py  scanner.py  storage.py  user.py  watermark.py
backend-fastapi/OpenCV-Toolkit/migrations/models/: 0_20251117014730_init.py
frontend-vue/OpenCV-Toolkit/: .env.development  README.md  index.html  package.json  pnpm-lock.yaml
frontend-vue/OpenCV-Toolkit/src/: App.vue  main.ts
frontend-vue/OpenCV-Toolkit/src/api/: auth.ts  gallery.ts  user.ts  vision.ts
frontend-vue/OpenCV-Toolkit/src/assets/: base.css  main.css
frontend-vue/OpenCV-Toolkit/src/router/: index.ts
frontend-vue/OpenCV-Toolkit/src/services/: http.ts
frontend-vue/OpenCV-Toolkit/src/stores/: auth.ts
frontend-vue/OpenCV-Toolkit/src/views/: GalleryView.vue  HomeView.vue  LoginView.vue  ProfileView.vue  RegisterView.vue  WorkspaceView.vue
